--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>whusnoopy by whusnoopy</title>
+    <title>gh by whusnoopy</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>whusnoopy</h1>
+        <h1>gh</h1>
         <h2>The personal repository of whusnoopy</h2>
         <a href="https://github.com/whusnoopy/whusnoopy" class="button"><small>View project on</small>GitHub</a>
       </div>
